Modify Cristian's name

--- a/paper.tex
+++ b/paper.tex
@@ -20,7 +20,7 @@
 
 
 \title{Model for Porous Silicon Structures with a Lateral Gradient}
-\author[1]{C. A. Ospina de la Cruz}
+\author[1]{C. A. Ospina-Delacruz}
 \author[2,3]{V. Agarwal}
 \author[3]{W. L. Mochán}
 
@@ -980,7 +980,7 @@ that may be employed for other samples grown in the same conditions.
 WLM acknowledges the support of DGAPA-UNAM under grant
 IN111119. VA acknowledges support from CONACyT Basic Sciences project
 A-S1 30393 and from PRODEP, and is grateful to ICF where she spent a
-sabatical. CODLC is grateful for a scholarship from CONACyT.
+sabatical. CAOD is grateful for a scholarship from CONACyT.
 \bibliographystyle{unsrt}
 \bibliography{bibligrin}
 \end{document}
