--- a/paper.tex
+++ b/paper.tex
@@ -608,7 +608,10 @@ $p$ and the etching rate $v=d/t$ for different values of the local
 current density $j_\perp$ expected at several positions on different
 samples.
 
-\subsection{Scanning Electron Microscopy}
+\notaC{\subsection{Morphological studies}}
+\notaC{The morphologies of the etched porous layers (plan-view and cross-sectional) was observed using 
+(SEM) scanning electron microscopy (Hitachi SU1510  High Technologies Canada, 
+Inc., Toronto, Canada), the thickness  and porosity  of each fabricated  film was measured.}
 \notaL{Insert a paragraph explaining something about how the
   micrographs were obtained. Choose an appropriate title for the
   subsection. Include the definition of the acronym SEM}
