Apply Vivechnas suggestions.

--- a/paper.tex
+++ b/paper.tex
@@ -21,19 +21,16 @@
 
 \title{Model for Porous Silicon Structures with a Lateral Gradient}
 \author[1]{C. A. Ospina-Delacruz}
-\author[2,3]{V. Agarwal}
-\author[3]{W. L. Mochán}
+\author[1,2]{V. Agarwal}
+\author[2]{W. L. Mochán}
 
-\affil[1]{Posgrado en Ingenier\'ia y Ciencias Aplicadas del Centro de
-  Investigación en Ingenier\'ia y Ciencias Aplicadas (CIICAp-IICBA),
+\affil[1]{Centro de
+  Investigación en Ingeniería y Ciencias Aplicadas (CIICAp-IICBA),
   Universidad Autónoma del Estado de Morelos (UAEM), Cuernavaca CP
   62209, México}
-\affil[2]{Centro de Investigaci\'on en Ingenier\'ia y Ciencias
-  Aplicadas,Universidad del Estado de Morelos, Av. Universidad 1001
-  Col. Chamilpa, Cuernavaca, Morelos 62209, Mexico  }
-\affil[3]{Instituto de Ciencias F\'isica ,Universidad Nacional
-  Autonoma de Mexico, Av. Universidad S/N, Col. Chamilpa, 62210
-  Cuernavaca, Morelos, Mexico}
+\affil[2]{Instituto de Ciencias F\'isicas, Universidad Nacional
+  Autonóma de México, Av. Universidad S/N, Col. Chamilpa, 62210
+  Cuernavaca, Morelos, México}
 \begin{document}
 
 \maketitle
@@ -58,7 +55,7 @@ porosity and thickness with position was corroborated through scanning electron 
 compared the calibration curves for different samples. Thus, from
 measurements on only one, or a few simple systems, we may obtain full
 calibration curves which may be used to predict, design, and fabricate
-more complex novel nonhomogenous devices with lateral gradients which can be used
+more complex novel non-homogenous devices with lateral gradients which can be used
 for manifold applications.
 
 Keywords: Porous Silicon; GRIN; Reflectance Spectra.
@@ -69,7 +66,7 @@ Keywords: Porous Silicon; GRIN; Reflectance Spectra.
 Surfaces with a gradient in the refractive index (GRIN) are of
 importance as they allow the engineering and tuning of the optical
 phase along their surface, yielding applications such as flat
-lenses. Furtheremore, there are important biological applications
+lenses. Furthermore, there are important biological applications
 which combine topographical features with index of refraction
 gradients \cite{pierscionek2012gradient}. Preparation of structures
 with gradients in other properties have also shown their
@@ -99,7 +96,7 @@ This technique has the additional advantage of being compatible
 with very large scale integration (VLSI) devices and integrable with microelectronics.
 
 Although porous silicon (PS) initially stimulated the interest of the scientific
-community due to its photoluminiscence in the visible range at room
+community due to its photoluminescence in the visible range at room
 temperature, it has presently
 been recognized as a multifaceted optical material due to its large surface
 area, biocompatibility, ease of fabrication and tunable refractive index.
@@ -154,12 +151,13 @@ surface topography \cite{khung2008using}.
 For applications such as those mentioned above,
 it would be very useful to be able to predict beforehand the spatially dependent
 properties of the resulting structures. This would allow the design
-and optimization of the desired devices.
+and possible optimization of the desired devices.
 In this work, we report a simple analytical model to quantitatively
 analyze the spatial dependence of the current density during the
-electrochemical on Si to produce PS structures. A calibration
+electrochemical etching of Si to produce PS nanostructures with a
+lateral gradient. A calibration
 procedure may then relate the current density to the porosity and the
-etching rate. Thus, for a given etching current acting over a given
+etching rate. Thus, for a given etching current acting over for a given
 time, we may predict the position dependence of the index of
 refraction and optical thickness of the resulting inhomogeneous
 layer, thus allowing the prediction of the optical properties of
